<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.13</version> <!-- APR 2026 -->
    <relativePath/>
  </parent>

  <groupId>se.skltp.tak</groupId>
  <artifactId>tak-parent</artifactId>
  <version>4.4.2</version>
  <packaging>pom</packaging>
  <name>tak-parent</name>
  <url>https://inera.atlassian.net/wiki/spaces/SKLTP/pages/3187836312</url>

  <modules>
    <module>tak-schemas</module>
    <module>tak-core</module>
    <module>tak-spring-boot-parent</module>
    <module>report</module>
    <module>tak-integration</module>
  </modules>

  <scm>
    <connection>scm:git:https://github.com:443/skltp/tak.git</connection>
    <developerConnection>scm:git:https://github.com:443/skltp/tak.git</developerConnection>
    <url>https://github.com/skltp/tak</url>
  </scm>
  <distributionManagement>
    <repository>
      <id>release-nexus</id>
      <name>Release Nexus</name>
      <url>${releases-nexus-url}</url>
    </repository>
    <snapshotRepository>
      <id>snapshot-nexus</id>
      <name>Snapshot Nexus</name>
      <url>${snapshot-nexus-url}</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <!-- Main deps or props. -->
    <java.version>17</java.version>
    <cxf.version>4.1.5</cxf.version> <!-- FEB 2026 - 4.2.x exists but might require Spring Boot 4. -->
    <dbunit.version>3.0.0</dbunit.version> <!-- JAN 2025. Latest as of APR 2026. -->

    <!-- Devops- and Deployment-supporting deps. -->
    <jacoco.plugin.version>0.8.14</jacoco.plugin.version> <!-- OCT 2025. Latest as of APR 2026. -->
    <ecs-logging-java.version>1.7.0</ecs-logging-java.version> <!-- APR 2025. Latest as of APR 2026. -->

    <!-- Project meta/spec. -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.cxf</groupId>
        <artifactId>cxf-bom</artifactId>
        <version>${cxf.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.dbunit</groupId>
        <artifactId>dbunit</artifactId>
        <version>${dbunit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency> <!-- SLF4J provider for Log4J2 placed at top-parent level to propagate throughout the project. -->
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j2-impl</artifactId>
      <!-- VERSION handled by Spring Boot parent. -->
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.3.1</version> <!-- DEC 2025. Latest as of APR 2026 -->
          <configuration>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <tagNameFormat>v@{project.version}</tagNameFormat>
            <pushChanges>true</pushChanges>
            <localCheckout>true</localCheckout>
            <arguments>-Dmaven.javadoc.skip=true</arguments>
            <checkModificationExcludes>
              <checkModificationExclude>tak-web/application.properties</checkModificationExclude>
            </checkModificationExcludes>
          </configuration>
        </plugin>

        <!-- User manual for license plugin in IntelliJ IDEA:
                -Set profile 'license' to true in your IDE and refresh the project.
                -Go to plugins > license on project-parent level;
                   and run 'license:check' to control, or 'license:format' to renew file headers.
                -Disable the 'license' profile and commit your updated headers. -->
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>5.0.0</version> <!-- MAR 2025. Latest as of APR 2026 -->
          <configuration>
            <!-- To fail the build when deprecated configuration is used. -->
            <prohibitLegacyUse>true</prohibitLegacyUse>
            <strictCheck>true</strictCheck>
            <useDefaultMapping>true</useDefaultMapping>
            <useDefaultExcludes>true</useDefaultExcludes>
            <basedir>${project.basedir}</basedir>
            <encoding>UTF-8</encoding>

            <licenseSets>
              <licenseSet>
                <header>License_header_template.txt</header>

                <!-- Properties used in the template -->
                <properties>
                  <copyrightYears>2014-2026</copyrightYears>
                  <inceptionYear>2014</inceptionYear>
                  <product>SKLTP</product>
                  <owner>Inera</owner>
                  <owner_url>https://www.inera.se/</owner_url>
                  <skltp_page>https://inera.atlassian.net/wiki/spaces/SKLTP/overview</skltp_page>
                </properties>

                <!-- File inclusion/exclusion -->
                <includes>
                  <include>**/*.java</include>
                </includes>

                <excludes>
                  <exclude>target/**</exclude>
                  <exclude>**/target/**</exclude>
                  <exclude>**/*.xsd</exclude>
                  <exclude>**/*.wsdl</exclude>
                  <exclude>**/*.xml</exclude>
                  <exclude>**/*.dtd</exclude>
                </excludes>
              </licenseSet>
            </licenseSets>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.10.0</version> <!-- FEB 2026. Latest as of APR 2026 -->
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>license</id>
      <activation />
      <build>
        <plugins>
          <plugin>
            <groupId>com.mycila</groupId>
            <artifactId>license-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>check-license</id>
                <phase>compile</phase>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>test-coverage</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.plugin.version}</version>
            <executions>
              <execution>
                <id>default-prepare-agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
              <execution>
                <id>default-report</id>
                <goals>
                  <goal>report</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
